# aquatic_bubble

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in
m4/: ChangeLog  Makefile.in
po/: ChangeLog  POTFILES.in  aqbubble.pot  es.gmo  es.po
src/: Makefile.am  Makefile.in  actor.cpp  actor.h  audio.cpp  audio.h  barra.cpp  barra.h  burbuja.cpp  burbuja.h  cadena.cpp  cadena.h  creditos.cpp  creditos.h  dialogo.cpp  dialogo.h  enemigos.cpp  enemigos.h  enum.h  escena.cpp  escena.h  grafico.cpp  grafico.h  int_gettext.h  items.cpp  items.h  juego.cpp  juego.h  libgrafico.cpp  libgrafico.h  main.cpp  main.h  marcas.cpp  marcas.h  menu.cpp  menu.h  mundo.cpp  mundo.h  nivel.cpp  nivel.h  (+20 more)
src/ima/: Makefile.am  Makefile.in
src/sonidos/: Makefile.am  Makefile.in
