AC_INIT(configure.in)
AM_CONFIG_HEADER(config.h)

PACKAGE=aqbubble
VERSION=0.3

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_PROG_CXX

ALL_LINGUAS="es"
AM_GNU_GETTEXT

localedir=${datadir}/locale
AC_SUBST(localedir)

GETTEXT_PACKAGE=$PACKAGE
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE([GETTEXT_PACKAGE],[],[...])

data_dir="$datadir/$PACKAGE"
AC_SUBST(data_dir)



dnl Check for SDL
SDL_VERSION=1.0.1
AM_PATH_SDL($SDL_VERSION,
            :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
CFLAGS="$CFLAGS $SDL_CFLAGS"
LIBS="$LIBS $SDL_LIBS"

dnl Check for the mixer and IMGlib libraries
have_SDLmixer=no
AC_CHECK_LIB(SDL_mixer, Mix_OpenAudio, have_SDLmixer=yes)
if test x$have_SDLmixer != xyes; then
    AC_MSG_ERROR([*** Can't find the SDL_mixer library
Try: http://www.devolution.com/~slouken/SDL/projects/SDL_mixer/
])
fi
have_SDLimage=no
AC_CHECK_LIB(SDL_image, IMG_Load_RW, have_SDLimage=yes)
if test x$have_SDLimage != xyes; then
    AC_MSG_ERROR([*** Can't find the SDL_image library
Try: http://www.devolution.com/~slouken/SDL/projects/SDL_image/
])
fi

AC_OUTPUT([ 
Makefile
src/Makefile
src/ima/Makefile
src/sonidos/Makefile
intl/Makefile 
po/Makefile.in 
m4/Makefile 
])
